--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-
-
-
+	<header>
+		<h1>Blakeley Kilgore</h1>
+	</header>
     <script src="js/main.js"></script>
 </body>
 </html>
