--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 	<header>
 		<h1>Blakeley Kilgore</h1>
 	</header>
+	<nav>
+		<h2>Navigation</h2>
+		<ul>
+			<li>Work Experience</li>
+			<li>Education</li>
+			<li>Skills</li>
+			<li>Community Involvement</li>
+			<li>Interests</li>
+		</ul>
+	</nav>
     <script src="js/main.js"></script>
 </body>
 </html>
