Add main with h2 to page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 			<li>Interests</li>
 		</ul>
 	</nav>
+	<main>
+		<h2>My Resume</h2>
+	</main>
     <script src="js/main.js"></script>
 </body>
 </html>
