Add six sections to the main

--- a/index.html
+++ b/index.html
@@ -24,6 +24,18 @@
 	</nav>
 	<main>
 		<h2>My Resume</h2>
+		<section>
+		</section>
+		<section>
+		</section>
+		<section>
+		</section>
+		<section>
+		</section>
+		<section>
+		</section>
+		<section>
+		</section>
 	</main>
     <script src="js/main.js"></script>
 </body>
