Add an h3 to each section

--- a/index.html
+++ b/index.html
@@ -26,16 +26,22 @@
 	<main>
 		<h2>My Resume</h2>
 		<section>
+			<h3>Work Experience</h3>
 		</section>
 		<section>
+			<h3>Education</h3>
 		</section>
 		<section>
+			<h3>Skills</h3>
 		</section>
 		<section>
+			<h3>Community Involvement</h3>
 		</section>
 		<section>
+			<h3>Interests</h3>
 		</section>
 		<section>
+			<h3>Contact</h3>
 		</section>
 	</main>
     <script src="js/main.js"></script>
