--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 			<h3>Contact</h3>
 		</section>
 	</main>
+	<footer>
+		<h2>Portfolio Links</h2>
+	</footer>
     <script src="js/main.js"></script>
 </body>
 </html>
