--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
 		<h2>My Resume</h2>
 		<section>
 			<h3>Work Experience</h3>
+			<article>
+			</article>
+			<article>
+			</article>
+			<article>
+			</article>
 		</section>
 		<section>
 			<h3>Education</h3>
