Add h4's to each work experience article

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
 		<section>
 			<h3>Work Experience</h3>
 			<article>
+				<h4>Social Media Coordinator</h4>
 			</article>
 			<article>
+				<h4>SEO and Graphics Intern</h4>
 			</article>
 			<article>
+				<h4>Social Media Intern</h4>
 			</article>
 		</section>
 		<section>
