Add three articles to the education section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 		</section>
 		<section>
 			<h3>Education</h3>
+			<article>
+			</article>
+			<article>
+			</article>
+			<article>
+			</article>
 		</section>
 		<section>
 			<h3>Skills</h3>
