Add h4's to each education article

--- a/index.html
+++ b/index.html
@@ -40,10 +40,13 @@
 		<section>
 			<h3>Education</h3>
 			<article>
+				<h4>Master of Arts in Mass Communication</h4>
 			</article>
 			<article>
+				<h4>Bachelor of Arts in Liberal Arts</h4>
 			</article>
 			<article>
+				<h4>Undergraduate Credit in Performance Arts</h4>
 			</article>
 		</section>
 		<section>
