Add company names to work experience

--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
 			<h3>Work Experience</h3>
 			<article>
 				<h4>Social Media Coordinator</h4>
+				<h5>Island Wing Company</h5>
 			</article>
 			<article>
 				<h4>SEO and Graphics Intern</h4>
+				<h5>Initial Outfitters</h5>
 			</article>
 			<article>
 				<h4>Social Media Intern</h4>
+				<h5>Lee County Humane Society</h5>
 			</article>
 		</section>
 		<section>
