Add area of study and school to education articles

--- a/index.html
+++ b/index.html
@@ -44,12 +44,18 @@
 			<h3>Education</h3>
 			<article>
 				<h4>Master of Arts in Mass Communication</h4>
+				<h5>Specialization in Web Design and Online Communication</h5>
+				<h6>University of Florida</h6>
 			</article>
 			<article>
 				<h4>Bachelor of Arts in Liberal Arts</h4>
+				<h5>Emphasis in Studio Art</h5>
+				<h6>Auburn University</h6>
 			</article>
 			<article>
 				<h4>Undergraduate Credit in Performance Arts</h4>
+				<h5>Emphasis in Equestrian Studies</h5>
+				<h6>Savannah College of Art and Design</h6>
 			</article>
 		</section>
 		<section>
