Add "Programs and Tools" to skills section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,26 @@
 		</section>
 		<section>
 			<h3>Skills</h3>
+			<article>
+				<h4>Programs and Tools</h4>
+				<ul>
+					<li>Adobe Photoshop CC</li>
+					<li>Adobe Illustrator CC</li>
+					<li>Adobe InDesign CC</li>
+					<li>Adobe Dreamweaver CC</li>
+					<li>Adobe Media Encoder CC</li>
+					<li>Sublime and Atom Text Editors</li>
+					<li>CyberDuck and Filezilla FTP clients</li>
+					<li>Git and the Command Line</li>
+					<li>Git Hub</li>
+					<li>Chrome Developer Tools</li>
+					<li>Google Analytics</li>
+					<li>Hootsuite</li>
+					<li>Xampp</li>
+					<li>WordPress</li>
+					<li>Microsoft Office</li>
+				</ul>
+			</article>
 		</section>
 		<section>
 			<h3>Community Involvement</h3>
