Add "Web Languages" to skills section

--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
 					<li>Microsoft Office</li>
 				</ul>
 			</article>
+			<article>
+				<h4>Web Languages</h4>
+				<ul>
+					<li>XHTML and Semantic HTML5</li>
+					<li>CSS</li>
+					<li>JavaScript</li>
+					<li>jQuery</li>
+					<li>PHP for HTML Templating</li>
+				</ul>
+			</article>
 		</section>
 		<section>
 			<h3>Community Involvement</h3>
