--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 		</section>
 		<section>
 			<h3>Interests</h3>
+			<img src="img/blakeleyandstephen.jpeg" alt="Blakeley and her Fiancé" title="Blakeley and her Fiancé" >
 		</section>
 		<section>
 			<h3>Contact</h3>
