Add contact information

--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
 		</section>
 		<section>
 			<h3>Contact</h3>
+			<p>(251) 591 - 2290</p>
+			<p>blakeleykilgore@gmail.com</p>
+			<p>PO Box 4031, Auburn, AL, 36830</p>
 		</section>
 	</main>
 	<footer>
