Add ul to community involvement section

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@
 		</section>
 		<section>
 			<h3>Community Involvement</h3>
+			<ul>
+				<li>Student Teacher for the Art Changinging Lives Art Therapy Program for those with dementia at the Jules Collins Smith Museum of Fine Arts</li>
+				<li>Volunteer for the Lee County Humane Society</li>
+				<li>Member of the Auburn Alumni Association</li>
+			</ul>
 		</section>
 		<section>
 			<h3>Interests</h3>
