Add portfolio links to footer ul

--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
 	</main>
 	<footer>
 		<h2>Portfolio Links</h2>
+		<ul>
+			<li>www.blakeleykilgoredesign.com</li>
+			<li>www.blakeleykilgoreart.com</li>
+		</ul>
 	</footer>
     <script src="js/main.js"></script>
 </body>
