Add work experience descriptions

--- a/index.html
+++ b/index.html
@@ -32,16 +32,19 @@
 				<h4>Social Media Coordinator</h4>
 				<h5>Island Wing Company</h5>
 				<p>August 2012 - November 2016</p>
+                <p>Responsibilities included: public outreach; graphic design for both print and social media; and serving/barteding on occasion.</p>
 			</article>
 			<article>
 				<h4>SEO and Graphics Intern</h4>
 				<h5>Initial Outfitters</h5>
 				<p>Summer 2016</p>
+                <p>Responsibilities included: graphic designs for the Fall catalog; redesigning elements of the website; and SEO analysis.</p>
 			</article>
 			<article>
 				<h4>Social Media Intern</h4>
 				<h5>Lee County Humane Society</h5>
 				<p>Summer 2016</p>
+                <p>Responsibilities included: posting to and monitoring 4 social media accounts; graphic design for both print and social media; and photography of animals in the shelter.</p>
 			</article>
 		</section>
 		<section>
