--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Blakeley Kilgore's Resume</title>
     <meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Open+Sans|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
