Add header styling

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<header>
-		<h1>Blakeley Kilgore</h1>
-		<p>Resumé November 2016</p>
+    <header>
+		<div id="page-header">
+			<h1>Blakeley Kilgore</h1>
+			<p>Resumé November 2016</p>
+		</div>
 	</header>
 	<nav>
 		<h2>Navigation</h2>
