Add styling to main sections and articles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		</div>
 	</header>
 	<nav>
-		<h2>Navigation</h2>
+		<h2 class="hide">Navigation</h2>
 		<ul>
 			<li>Work Experience</li>
 			<li>Education</li>
@@ -28,7 +28,7 @@
 		</ul>
 	</nav>
 	<main>
-		<h2>My Resume</h2>
+		<h2 class="hide">My Resume</h2>
 		<section>
 			<h3>Work Experience</h3>
 			<article>
