--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 			<article>
 				<h4>Social Media Coordinator</h4>
 				<h5>Island Wing Company</h5>
-				<p>August 2012 - November 2016</p>
+				<p class="date">August 2012 - November 2016</p>
                 <p>Responsibilities included: public outreach; graphic design for both print and social media; and serving/barteding on occasion.</p>
 			</article>
 			<article>
 				<h4>SEO and Graphics Intern</h4>
 				<h5>Initial Outfitters</h5>
-				<p>Summer 2016</p>
+				<p class="date">Summer 2016</p>
                 <p>Responsibilities included: graphic designs for the Fall catalog; redesigning elements of the website; and SEO analysis.</p>
 			</article>
 			<article>
 				<h4>Social Media Intern</h4>
 				<h5>Lee County Humane Society</h5>
-				<p>Summer 2016</p>
+				<p class="date">Summer 2016</p>
                 <p>Responsibilities included: posting to and monitoring 4 social media accounts; graphic design for both print and social media; and photography of animals in the shelter.</p>
 			</article>
 		</section>
@@ -56,19 +56,19 @@
 				<h4>Master of Arts in Mass Communication</h4>
 				<h5>Specialization in Web Design and Online Communication</h5>
 				<h6>University of Florida</h6>
-				<p>Graduation: May 2017</p>
+				<p class="date">Graduation: May 2017</p>
 			</article>
 			<article>
 				<h4>Bachelor of Arts in Liberal Arts</h4>
 				<h5>Emphasis in Studio Art</h5>
 				<h6>Auburn University</h6>
-				<p>Graduation: August 2015</p>
+				<p class="date">Graduation: August 2015</p>
 			</article>
 			<article>
 				<h4>Undergraduate Credit in Performance Arts</h4>
 				<h5>Emphasis in Equestrian Studies</h5>
 				<h6>Savannah College of Art and Design</h6>
-				<p>Attended Fall 2011</p>
+				<p class="date">Attended Fall 2011</p>
 			</article>
 		</section>
 		<section>
