Add styling to the education section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <p>Responsibilities included: posting to and monitoring 4 social media accounts; graphic design for both print and social media; and photography of animals in the shelter.</p>
 			</article>
 		</section>
-		<section>
+		<section id="education">
 			<h3>Education</h3>
 			<article>
 				<h4>Master of Arts in Mass Communication</h4>
