Add styling to the skills section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				<p class="date">Attended Fall 2011</p>
 			</article>
 		</section>
-		<section>
+		<section id="skills">
 			<h3>Skills</h3>
 			<article>
 				<h4>Programs and Tools</h4>
