Add styling to the community involvement section

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				</ul>
 			</article>
 		</section>
-		<section>
+		<section id="community-involvement">
 			<h3>Community Involvement</h3>
 			<ul>
 				<li>Student Teacher for the Art Changinging Lives Art Therapy Program for those with dementia at the Jules Collins Smith Museum of Fine Arts</li>
