Add header animation

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 			<h1>Blakeley Kilgore</h1>
 			<p>Resumé November 2016</p>
 		</div>
+        <div class="sky">
+    		<div class="clouds_one"></div>
+    		<div class="clouds_two"></div>
+    		<div class="clouds_three"></div>
+	    </div>
 	</header>
 	<nav>
 		<h2 class="hide">Navigation</h2>
