Make elements jump to side over 700px

--- a/index.html
+++ b/index.html
@@ -119,8 +119,12 @@
 		</section>
 		<section id="interests">
 			<h3>Interests</h3>
-			<img src="img/blakeleyandstephen.jpeg" alt="Blakeley and her Fiancé" title="Blakeley and her Fiancé" >
-            <p>Blakeley Kilgore was born in Providence, RI, but calls Fairhope, AL “home.” As a life-long equestrian, she first began her college career with the hopes of becoming an equine specialist. However, her love for the arts was never silenced, and she made the switch to the world of visual design. She is chronically dedicated to enhancing her design skills, and will always continue to love and pursue fine arts on the side. When she is not working on all things visual, you will find her outdoors, most likely on a boat, and most likely with her dog.</p>
+            <div>
+			    <img src="img/blakeleyandstephen.jpeg" alt="Blakeley and her Fiancé" title="Blakeley and her Fiancé" >
+            </div>
+            <div>
+                <p>Blakeley Kilgore was born in Providence, RI, but calls Fairhope, AL “home.” As a life-long equestrian, she first began her college career with the hopes of becoming an equine specialist. However, her love for the arts was never silenced, and she made the switch to the world of visual design. She is chronically dedicated to enhancing her design skills, and will always continue to love and pursue fine arts on the side. When she is not working on all things visual, you will find her outdoors, most likely on a boat, and most likely with her dog.</p>
+            </div>
 		</section>
 		<section id="contact">
 			<h3>Contact</h3>
