Add and style all links

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 	<nav>
 		<h2 class="hide">Navigation</h2>
 		<ul>
-			<li>Work Experience</li>
-			<li>Education</li>
-			<li>Skills</li>
-			<li>Community Involvement</li>
-			<li>Interests</li>
-			<li>Contact</li>
+			<li><a href="#experience">Work Experience</a></li>
+			<li><a href="#education">Education</a></li>
+			<li><a href="#skills">Skills</a></li>
+			<li><a href="#community-involvement">Community Involvement</a></li>
+			<li><a href="#interests">Interests</a></li>
+			<li><a href="#contact">Contact</a></li>
 		</ul>
 	</nav>
 	<main>
 		<h2 class="hide">My Resume</h2>
-		<section>
+		<section id="experience">
 			<h3>Work Experience</h3>
 			<article>
 				<h4>Social Media Coordinator</h4>
@@ -138,8 +138,8 @@
 	<footer>
 		<h2 class="hide">Portfolio Links</h2>
 		<ul>
-			<li>www.blakeleykilgoredesign.com</li>
-			<li>www.blakeleykilgoreart.com</li>
+			<li><a href="http://www.blakeleykilgoredesign.com">www.blakeleykilgoredesign.com</a></li>
+			<li><a href="http://www.blakeleykilgoreart.com">www.blakeleykilgoreart.com</a></li>
 		</ul>
 	</footer>
     <script src="js/main.js"></script>
