--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
 			<li><a href="http://www.blakeleykilgoreart.com">www.blakeleykilgoreart.com</a></li>
 		</ul>
 	</footer>
+    <script src="js/jquery-3.1.1.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
