--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<p>Resumé November 2016</p>
 		</div>
 	</header>
-	<nav>
+	<nav class="section">
 		<h2 class="hide">Navigation</h2>
 		<ul>
 			<li><a href="#experience">Work Experience</a></li>
@@ -27,6 +27,7 @@
 			<li><a href="#contact">Contact</a></li>
 		</ul>
 	</nav>
+    <button class="button">Scroll Down</button>
 	<main>
 		<h2 class="hide">My Resume</h2>
 		<section id="experience">
@@ -50,7 +51,7 @@
                 <p>Responsibilities included: posting to and monitoring 4 social media accounts; graphic design for both print and social media; and photography of animals in the shelter.</p>
 			</article>
 		</section>
-		<section id="education">
+		<section id="education" class="section">
 			<h3>Education</h3>
 			<article>
 				<h4>Master of Arts in Mass Communication</h4>
@@ -71,7 +72,7 @@
 				<p class="date">Attended Fall 2011</p>
 			</article>
 		</section>
-		<section id="skills">
+		<section id="skills" class="section">
 			<h3>Skills</h3>
 			<article>
 				<h4>Programs and Tools</h4>
@@ -104,7 +105,7 @@
 				</ul>
 			</article>
 		</section>
-		<section id="community-involvement">
+		<section id="community-involvement" class="section">
 			<h3>Community Involvement</h3>
 			<ul>
 				<li>Student Teacher for the Art Changinging Lives Art Therapy Program for those with dementia at the Jules Collins Smith Museum of Fine Arts</li>
@@ -112,7 +113,7 @@
 				<li>Member of the Auburn Alumni Association</li>
 			</ul>
 		</section>
-		<section id="interests">
+		<section id="interests" class="section">
 			<h3>Interests</h3>
             <div>
 			    <img src="img/blakeleyandstephen.jpeg" alt="Blakeley and her Fiancé" title="Blakeley and her Fiancé" >
@@ -121,7 +122,7 @@
                 <p>Blakeley Kilgore was born in Providence, RI, but calls Fairhope, AL “home.” As a life-long equestrian, she first began her college career with the hopes of becoming an equine specialist. However, her love for the arts was never silenced, and she made the switch to the world of visual design. She is chronically dedicated to enhancing her design skills, and will always continue to love and pursue fine arts on the side. When she is not working on all things visual, you will find her outdoors, most likely on a boat, and most likely with her dog.</p>
             </div>
 		</section>
-		<section id="contact">
+		<section id="contact" class="section">
 			<h3>Contact</h3>
             <div>
                 <p>(251) 591 - 2290</p>
@@ -130,11 +131,12 @@
             </div>
 		</section>
 	</main>
-	<footer>
+	<footer class="section">
 		<h2 class="hide">Portfolio Links</h2>
 		<ul>
 			<li><a href="http://www.blakeleykilgoredesign.com">www.blakeleykilgoredesign.com</a></li>
 			<li><a href="http://www.blakeleykilgoreart.com">www.blakeleykilgoreart.com</a></li>
+            <li><a href="index.html" class="back-button">Back to Top</a></li>
 		</ul>
 	</footer>
     <script src="js/jquery-3.1.1.js"></script>
