--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Open+Sans|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
+    <link rel="stylesheet" href="css/tooltipster.bundle.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -140,6 +141,7 @@
 		</ul>
 	</footer>
     <script src="js/jquery-3.1.1.js"></script>
+    <script src="js/tooltipster.bundle.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
