--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 	<footer class="section">
 		<h2 class="hide">Portfolio Links</h2>
 		<ul>
-			<li><a href="http://www.blakeleykilgoredesign.com">www.blakeleykilgoredesign.com</a></li>
-			<li><a href="http://www.blakeleykilgoreart.com">www.blakeleykilgoreart.com</a></li>
+			<li><span class="tooltip" title="Check Out my Design"><a href="http://www.blakeleykilgoredesign.com">www.blakeleykilgoredesign.com</a></span></li>
+			<li><span class="tooltip" title="Check Out my Art"><a href="http://www.blakeleykilgoreart.com">www.blakeleykilgoreart.com</a></span></li>
             <li><a href="index.html" class="back-button">Back to Top</a></li>
 		</ul>
 	</footer>
