--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC|Open+Sans|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/tooltipster.bundle.css">
+    <link rel="stylesheet" type="text/css" href="css/tooltipster-follower.min.css" />
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -142,6 +143,7 @@
 	</footer>
     <script src="js/jquery-3.1.1.js"></script>
     <script src="js/tooltipster.bundle.js"></script>
+    <script src="js/tooltipster-follower.min.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
