--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			<li><a href="#contact">Contact</a></li>
 		</ul>
 	</nav>
+    <div id="colorstrip1"></div>
     <button class="button">Scroll Down</button>
 	<main>
 		<h2 class="hide">My Resume</h2>
@@ -133,6 +134,7 @@
             </div>
 		</section>
 	</main>
+    <div id="colorstrip2"></div>
 	<footer class="section">
 		<h2 class="hide">Portfolio Links</h2>
 		<ul>
@@ -141,9 +143,11 @@
             <li><a href="index.html" class="back-button">Back to Top</a></li>
 		</ul>
 	</footer>
-    <script src="js/jquery-3.1.1.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
     <script src="js/tooltipster.bundle.js"></script>
     <script src="js/tooltipster-follower.min.js"></script>
+    <script src="js/colorstrip.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
